--- a/index.html
+++ b/index.html
@@ -6,11 +6,28 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" />
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootswatch/4.5.2/darkly/bootstrap.min.css"
+    integrity="sha384-nNK9n28pDUDDgIiIqZ/MiyO3F4/9vsMtReZK39klb/MtkZI3/LtjSjlmyVPS3KdN" crossorigin="anonymous">
   <link rel="stylesheet" href="assets/style.css" />
   <title>TaskMaster</title>
 </head>
 
 <body>
+  <header class="container-fluid">
+    <div class="row no-gutters">
+      <div class="col-12"></div>
+    </div>
+  </header>
+  <main class="container-fluid">
+    <div class="row no-gutters">
+      <div class="col"></div>
+    </div>
+  </main>
+  <footer class="container-fluid">
+    <div class="row no-gutters">
+      <div class="col"></div>
+    </div>
+  </footer>
   <script src="app/main.js" type="module"></script>
 </body>
 
