--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         </div>
       </form>
     </div>
-    <div class="row" id="lists">
+    <div class="row no-gutters" id="lists">
     </div>
   </main>
   <footer class="container-fluid bg-success">
@@ -40,6 +40,15 @@
       </div>
     </div>
   </footer>
+  <script src='https://code.jquery.com/jquery-3.2.1.slim.min.js'
+    integrity='sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN'
+    crossorigin='anonymous'></script>
+  <script src='https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js'
+    integrity='sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q'
+    crossorigin='anonymous'></script>
+  <script src='https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js'
+    integrity='sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl'
+    crossorigin='anonymous'></script>
   <script src='https://kit.fontawesome.com/d2e00f75e8.js' crossorigin='anonymous'></script>
   <script src="app/main.js" type="module"></script>
 </body>
